@@ -1,10 +1,11 @@
 package com.gallery.catalog.service;
 
-import com.gallery.catalog.exception.TagNotFoundException;
 import com.gallery.catalog.dto.TagDto;
+import com.gallery.catalog.exception.TagNotFoundException;
 import com.gallery.catalog.model.Tag;
 import com.gallery.catalog.repository.TagRepository;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -17,68 +18,55 @@ public class TagService {
         this.tagRepository = tagRepository;
     }
 
-    private TagDto convertToDto(Tag tag) {
-        return new TagDto(
-            tag.getId(),
-            tag.getName(),
-            tag.getDescription()
-        );
-    }
-
     @Transactional(readOnly = true)
     public List<TagDto> getAllTags() {
         return tagRepository.findAll().stream()
             .map(this::convertToDto)
-            .toList();
+            .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
     public TagDto getTagById(Long id) {
-        return convertToDto(tagRepository.findById(id)
-            .orElseThrow(() -> new TagNotFoundException(id.toString())));
+        Tag tag = tagRepository.findById(id)
+            .orElseThrow(() -> new TagNotFoundException("Tag not found with id: " + id));
+        return convertToDto(tag);
     }
 
     @Transactional(readOnly = true)
     public TagDto getTagByName(String name) {
-        return convertToDto(tagRepository.findByName(name.trim())
-            .orElseThrow(() -> new TagNotFoundException(name)));
+        Tag tag = tagRepository.findByName(name)
+            .orElseThrow(() -> new TagNotFoundException("Tag not found with name: " + name));
+        return convertToDto(tag);
     }
 
     @Transactional
     public TagDto createTag(TagDto dto) {
-        if (dto.name() == null || dto.name().trim().isEmpty()) {
-            throw new IllegalArgumentException("Tag name is required");
-        }
-
-        tagRepository.findByName(dto.name().trim()).ifPresent(existing -> {
-            throw new IllegalArgumentException("Tag already exists: " + dto.name());
-        });
-
         Tag tag = new Tag();
-        tag.setName(dto.name().trim());
+        tag.setName(dto.name());
         tag.setDescription(dto.description());
-        return convertToDto(tagRepository.save(tag));
+        Tag saved = tagRepository.save(tag);
+        return convertToDto(saved);
     }
 
     @Transactional
     public TagDto updateTag(Long id, TagDto dto) {
-        if (dto.name() == null || dto.name().trim().isEmpty()) {
-            throw new IllegalArgumentException("Tag name is required");
-        }
-
         Tag tag = tagRepository.findById(id)
-            .orElseThrow(() -> new TagNotFoundException(id.toString()));
-
-        tag.setName(dto.name().trim());
+            .orElseThrow(() -> new TagNotFoundException("Tag not found with id: " + id));
+        tag.setName(dto.name());
         tag.setDescription(dto.description());
-        return convertToDto(tagRepository.save(tag));
+        Tag updated = tagRepository.save(tag);
+        return convertToDto(updated);
     }
 
     @Transactional
     public void deleteTag(Long id) {
         if (!tagRepository.existsById(id)) {
-            throw new TagNotFoundException(id.toString());
+            throw new TagNotFoundException("Tag not found with id: " + id);
         }
         tagRepository.deleteById(id);
+    }
+
+    private TagDto convertToDto(Tag tag) {
+        return new TagDto(tag.getId(), tag.getName(), tag.getDescription());
     }
 }
